tests/cases/parser/literals/characters/hex_out_of_range.hash
// run=fail, stage=parse

'\xFF';
'\x8f';
